# amalavastra-backend

./: .env.example  .gitignore  README.md  STORAGE_SETUP.md  check_users.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  seed.py
core/: config.py  exceptions.py  logging.py  security.py
dependencies/: __init__.py  auth.py
middleware/: security.py
migrations/: 001_complete_setup.sql  002_auth_invoices.sql  003_saree_vendor_batch.sql  README.md
routers/: __init__.py  analytics.py  auth.py  customers.py  installments.py  invoices.py  orders.py  payments.py  sarees.py
schemas/: auth.py  base.py  customers.py  installments.py  invoices.py  orders.py  payments.py  sarees.py
services/: auth_service.py  invoice_service.py  pdf_generator.py  storage_service.py
