[tool.poetry]
name = "amalavastra-backend"
version = "0.1.0"
description = "Backend for Saree Docs (Amalavastra)"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
supabase = "^2.0.0"
pydantic = "^2.6.0"
python-dotenv = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
